--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 			const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 			
 			const transportation = data.reduce(function(obj, item) {
-				
-			}, {
-				car: 0,
-				walk: 0,
-				truck: 0,
-				van: 0,
-				bike: 0
-			})
+				if(!obj[item]) {
+					obj[item] = 0;
+				}
+				obj[item]++;
+				return obj;
+			}, {});
+
+			console.log(transportation);
 		</script>
 	</body>
 </html>
